# better-builder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  test.yaml
src/: lib.rs
tests/: all_optional.rs  compile_tests.rs  function_collision.rs  no_fields.rs
tests/compile_tests/should_fail/: error_on_enum.rs  error_on_enum.stderr  error_on_tuple_struct.rs  error_on_tuple_struct.stderr
tests/compile_tests/should_pass/: all_optional.rs  all_required.rs  basic.rs  duplicates.rs  generics.rs  no_fields.rs  trait_derivation.rs
